--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "test": "jest --watch"
   },
   "husky": {
-    "pre-push": "main=true npm test"
+    "pre-push": "CI=true npm test"
   },
   "dependencies": {
     "next": "12.1.6",
