--- a/package.json
+++ b/package.json
@@ -9,11 +9,11 @@
     "lint": "next lint",
     "test": "jest --watch"
   },
-  "husky": {
+"husky": {
       "hooks": {
-        "pre-push": "CI=true npm test"
+        "pre-commit": "echo \"[Husky] applypatch-msg\""
       }
-  },
+    },
   "dependencies": {
     "next": "12.1.6",
     "react": "18.1.0",
